<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.fragments.SignupFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/app_dark_green">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#A4FFFFFF"
            android:alpha="0.2"
            tools:ignore="UnusedAttribute" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/top"
            android:background="@color/app_dark_green"
            app:layout_constraintVertical_weight="0.20"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/bottom">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:alpha="0.2"
                android:layout_alignParentStart="true"
                android:layout_marginStart="-50dp"
                android:layout_marginTop="-50dp"
                android:src="@drawable/auth_header_circle"
                tools:ignore="ContentDescription,UnusedAttribute" />

            <ImageView
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:alpha="0.2"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="-50dp"
                android:layout_marginTop="-70dp"
                android:layout_marginBottom="-70dp"
                android:src="@drawable/auth_header_circle"
                tools:ignore="ContentDescription,UnusedAttribute"/>

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:alpha="0.2"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="-5dp"
                android:layout_marginBottom="-70dp"
                android:src="@drawable/auth_header_circle"
                tools:ignore="ContentDescription,,UnusedAttribute"/>

        </RelativeLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/bottom"
            android:background="@drawable/auth_content_background"
            app:layout_constraintVertical_weight="0.80"
            app:layout_constraintTop_toBottomOf="@+id/top"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_big_sign_in"
                android:text="@string/sign_up"
                android:textColor="@color/app_dark_green"
                android:textStyle="bold"
                android:textSize="27sp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_name"
                android:text="@string/name"
                android:textColor="@color/app_dark_green"
                app:layout_constraintVertical_chainStyle="packed"
                app:layout_constraintStart_toStartOf="@+id/tv_big_sign_in"
                app:layout_constraintTop_toBottomOf="@+id/tv_big_sign_in"
                app:layout_constraintBottom_toTopOf="@+id/et_name"/>

            <EditText
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:id="@+id/et_name"
                android:textCursorDrawable="@null"
                android:padding="7dp"
                android:singleLine="true"
                android:textColor="@color/app_black"
                android:inputType="textPersonName"
                android:background="@drawable/auth_edittext_box"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="@id/tv_big_sign_in"
                app:layout_constraintEnd_toEndOf="@id/tv_big_sign_in"
                app:layout_constraintTop_toBottomOf="@id/tv_name"
                app:layout_constraintBottom_toTopOf="@+id/tv_email"
                android:importantForAutofill="no"
                tools:ignore="LabelFor,UnusedAttribute" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_email"
                android:text="@string/email"
                android:textColor="@color/app_dark_green"
                android:layout_marginTop="15dp"
                app:layout_constraintStart_toStartOf="@+id/tv_big_sign_in"
                app:layout_constraintTop_toBottomOf="@+id/et_name"
                app:layout_constraintBottom_toTopOf="@+id/et_email"/>

            <EditText
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:id="@+id/et_email"
                android:textCursorDrawable="@null"
                android:padding="7dp"
                android:singleLine="true"
                android:textColor="@color/app_black"
                android:inputType="textEmailAddress"
                android:background="@drawable/auth_edittext_box"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="@id/tv_big_sign_in"
                app:layout_constraintEnd_toEndOf="@id/tv_big_sign_in"
                app:layout_constraintTop_toBottomOf="@id/tv_email"
                app:layout_constraintBottom_toTopOf="@+id/tv_password"
                android:importantForAutofill="no"
                tools:ignore="LabelFor,UnusedAttribute" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_password"
                android:text="@string/password"
                android:textColor="@color/app_dark_green"
                android:layout_marginTop="15dp"
                app:layout_constraintStart_toStartOf="@+id/tv_big_sign_in"
                app:layout_constraintTop_toBottomOf="@+id/et_email"
                app:layout_constraintBottom_toTopOf="@+id/et_password"/>

            <EditText
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:id="@+id/et_password"
                android:textCursorDrawable="@null"
                android:singleLine="true"
                android:padding="7dp"
                android:inputType="textPassword"
                android:textColor="@color/app_black"
                android:background="@drawable/auth_edittext_box"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="@id/tv_big_sign_in"
                app:layout_constraintEnd_toEndOf="@id/tv_big_sign_in"
                app:layout_constraintTop_toBottomOf="@id/tv_password"
                app:layout_constraintBottom_toTopOf="@+id/btn_sign_up"
                android:importantForAutofill="no"
                tools:ignore="LabelFor,UnusedAttribute" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/dark_green_button_background"
                android:id="@+id/btn_sign_up"
                android:layout_marginStart="70dp"
                android:layout_marginEnd="70dp"
                android:layout_marginTop="60dp"
                android:text="@string/sign_up"
                android:textColor="@color/app_white"
                android:textAllCaps="false"
                app:layout_constraintStart_toStartOf="@id/tv_big_sign_in"
                app:layout_constraintEnd_toEndOf="@+id/tv_big_sign_in"
                app:layout_constraintTop_toBottomOf="@+id/et_password"
                app:layout_constraintBottom_toTopOf="@+id/switch_to_sign_in"
                tools:ignore="UnusedAttribute" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/switch_to_sign_in"
                android:text="@string/switch_to_sign_in"
                android:textColor="@color/app_dark_green"
                android:padding="10dp"
                android:layout_marginTop="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_sign_up"
                app:layout_constraintBottom_toBottomOf="parent"/>


        </androidx.constraintlayout.widget.ConstraintLayout>


        <include
            layout="@layout/layout_loading"
            android:id="@+id/progressView" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>
